--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418210911">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418212305">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418210911" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418210911">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418212305" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418212305">
 	<title>About</title>
 
 </head>
@@ -85,7 +85,7 @@
                             <div class="main-welcome__image">
                                 <picture>
                                     <source media="(min-width: 1280px)" type="image/webp" srcset="img/page/bg-3-1280.webp">
-                                    <img src="img/page/bg-3.webp" alt="image">
+                                    <img width="100%" height="100%" src="img/page/bg-3.webp" alt="image">
                                 </picture>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                         <div class="main-vision__body">
                             <div class="main-vision__item">
                                 <div class="main-vision__image">
-                                    <picture><source srcset="img/page/page3/image2.webp" type="image/webp"><img src="img/page/page3/image2.png" alt="image"></picture>
+                                    <picture><source srcset="img/page/page3/image2.webp" type="image/webp"><img width="100%" height="100%" src="img/page/page3/image2.png" alt="image"></picture>
                                 </div>
                                 <div class="main-vision__block block left-border-decor">
                                     <div class="block__title title-38">
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                                 <div class="main-vision__image">
-                                    <picture><source srcset="img/page/page3/image3.webp" type="image/webp"><img src="img/page/page3/image3.png" alt="image"></picture>
+                                    <picture><source srcset="img/page/page3/image3.webp" type="image/webp"><img width="100%" height="100%" src="img/page/page3/image3.png" alt="image"></picture>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                             <div class="main-release__item card-item  bac-black animation-left  _anim-items">
 								<div class="card-item__header card-header">
 									<div class="card-item__image">
-                                        <picture><source srcset="img/page/page3/image4.webp" type="image/webp"><img src="img/page/page3/image4.png" alt="image"></picture>
+                                        <picture><source srcset="img/page/page3/image4.webp" type="image/webp"><img loading="lazy" width="100%" height="100%" src="img/page/page3/image4.png" alt="image"></picture>
 									</div>
 									<div class="card-header__title title-24">
 										<h3>YourBank Launches New Rewards Program to Enhance Customer Loyalty and Satisfaction</h3>
@@ -168,7 +168,7 @@
                             <div class="main-release__item card-item bac-black  animation-left  _anim-items">
 								<div class="card-item__header card-header">
 									<div class="card-item__image">
-                                        <picture><source srcset="img/page/page3/image5.webp" type="image/webp"><img src="img/page/page3/image5.png" alt="image"></picture>
+                                        <picture><source srcset="img/page/page3/image5.webp" type="image/webp"><img loading="lazy" width="100%" height="100%" src="img/page/page3/image5.png" alt="image"></picture>
 									</div>
 									<div class="card-header__title title-24">
 										<h3>YourBank Launches New Rewards Program to Enhance Customer Loyalty and Satisfaction</h3>
@@ -189,7 +189,7 @@
                             <div class="main-release__item card-item  bac-black  animation-left  _anim-items">
 								<div class="card-item__header card-header">
 									<div class="card-item__image">
-                                        <picture><source srcset="img/page/page3/image6.webp" type="image/webp"><img src="img/page/page3/image6.png" alt="image"></picture>
+                                        <picture><source srcset="img/page/page3/image6.webp" type="image/webp"><img loading="lazy" width="100%" height="100%" src="img/page/page3/image6.png" alt="image"></picture>
 									</div>
 									<div class="card-header__title title-24">
 										<h3>YourBank Expands Branch Network with Opening of New Location in Chennai</h3>
@@ -210,7 +210,7 @@
                             <div class="main-release__item card-item bac-black  animation-left  _anim-items">
 								<div class="card-item__header card-header">
 									<div class="card-item__image">
-                                        <picture><source srcset="img/page/page3/image7.webp" type="image/webp"><img src="img/page/page3/image7.png" alt="image"></picture>
+                                        <picture><source srcset="img/page/page3/image7.webp" type="image/webp"><img loading="lazy" width="100%" height="100%" src="img/page/page3/image7.png" alt="image"></picture>
 									</div>
 									<div class="card-header__title title-24">
 										<h3>YourBank Partners with Local Nonprofit to Support Financial Education Initiatives</h3>
@@ -320,7 +320,7 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418210911"></script>
-		<script src="js/app.min.js?_v=20240418210911"></script>
+       
+		<script src="js/app.min.js?_v=20240418212305"></script>
 	</body>
 </html>
