--- a/login.html
+++ b/login.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418213940">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418214830">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418213940" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418213940">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418214830" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418214830">
 	<title>Login</title>
 
 </head>
@@ -96,7 +96,7 @@
 									</div>
 									<div class="form__buttons">
 										<button type="submit" class="form__button button button-yellow button-big">Login</button>
-										<a class="form__button button  button-active" href="">Sign Up</a>
+										<a class="form__button button  button-active" href="#">Sign Up</a>
 									</div>	
 								</div>
 							</form>
@@ -106,7 +106,7 @@
 								</div>
 								<div class="main-forms__images">
 									<div class="main-forms__img card-header__image">
-										<a href="/">
+										<a href="#">
 											<svg class="main-forms__svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
 												<g clip-path="url(#clip0_67_207)">
 												  <path  class="path-hover"  d="M29.7083 15.3456C29.7083 14.3259 29.6256 13.3007 29.4493 12.2976H15.3008V18.0738H23.4029C23.0667 19.9368 21.9864 21.5848 20.4046 22.632V26.3799H25.2383C28.0768 23.7674 29.7083 19.9092 29.7083 15.3456Z" fill="#CAFF33"/>
@@ -125,7 +125,7 @@
 										  <span></span>
 									</div>
 									<div class="main-forms__img card-header__image">
-										<a href="/">
+										<a href="#">
 											<svg class="main-forms__svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
 												<g clip-path="url(#clip0_67_204)">
 												  <path class="path-hover"  d="M30 15C30 6.71572 23.2843 0 15 0C6.71572 0 0 6.71572 0 15C0 22.4868 5.48525 28.6925 12.6562 29.8178V19.3359H8.84766V15H12.6562V11.6953C12.6562 7.93594 14.8957 5.85938 18.322 5.85938C19.9626 5.85938 21.6797 6.15234 21.6797 6.15234V9.84375H19.7883C17.925 9.84375 17.3438 11.0001 17.3438 12.1875V15H21.5039L20.8389 19.3359H17.3438V29.8178C24.5147 28.6925 30 22.4868 30 15Z" fill="#CAFF33"/>
@@ -142,7 +142,7 @@
 										  <span></span>
 									</div>
 									<div class="main-forms__img card-header__image">
-										<a href="/"><svg  class="main-forms__svg  main-forms__svg-3" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+										<a href="#"><svg  class="main-forms__svg  main-forms__svg-3" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
 											<path  class="path-hover" d="M26.0533 21.4311C25.6374 22.3919 25.1451 23.2763 24.5748 24.0893C23.7973 25.1978 23.1608 25.9651 22.6702 26.3911C21.9097 27.0905 21.095 27.4487 20.2225 27.469C19.5961 27.469 18.8407 27.2908 17.9614 26.9292C17.0792 26.5694 16.2685 26.3911 15.5272 26.3911C14.7498 26.3911 13.916 26.5694 13.0241 26.9292C12.1309 27.2908 11.4114 27.4792 10.8612 27.4979C10.0245 27.5335 9.19055 27.1652 8.35811 26.3911C7.8268 25.9277 7.16224 25.1333 6.36612 24.0079C5.51195 22.8061 4.80971 21.4124 4.25955 19.8236C3.67036 18.1074 3.375 16.4456 3.375 14.8367C3.375 12.9938 3.77323 11.4043 4.57087 10.0722C5.19775 9.00232 6.03172 8.15833 7.0755 7.53875C8.11928 6.91917 9.24708 6.60344 10.4616 6.58324C11.1262 6.58324 11.9977 6.78881 13.0807 7.19281C14.1606 7.59817 14.854 7.80373 15.158 7.80373C15.3853 7.80373 16.1556 7.56337 17.4615 7.08417C18.6964 6.63977 19.7387 6.45576 20.5925 6.52824C22.9062 6.71497 24.6444 7.62702 25.8004 9.27018C23.7311 10.5239 22.7076 12.28 22.7279 14.5327C22.7466 16.2874 23.3832 17.7476 24.6342 18.9069C25.2011 19.445 25.8343 19.8609 26.5388 20.1563C26.386 20.5993 26.2247 21.0237 26.0533 21.4311ZM20.747 0.550401C20.747 1.92571 20.2445 3.20984 19.243 4.39842C18.0344 5.8114 16.5725 6.62789 14.9873 6.49905C14.9671 6.33405 14.9554 6.1604 14.9554 5.97792C14.9554 4.65762 15.5301 3.24464 16.5508 2.08933C17.0604 1.50438 17.7085 1.01801 18.4944 0.630012C19.2787 0.247807 20.0205 0.0364399 20.7181 0.000244141C20.7385 0.184102 20.747 0.367972 20.747 0.550383V0.550401Z" fill="#CAFF33"/>
 										</svg></a>
 										<span></span>
@@ -528,7 +528,7 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418213940"></script>
-		<script src="js/app.min.js?_v=20240418213940"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418214830"></script>
+		<script src="js/app.min.js?_v=20240418214830"></script>
 	</body>
 </html>
