--- a/about.html
+++ b/about.html
@@ -5,11 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418215611">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418221237">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418215611" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418221237" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418221237">
 	<title>About</title>
+
 </head>
 	<body>
 		<div class="wrapper">
@@ -83,7 +85,7 @@
                             <div class="main-welcome__image">
                                 <picture>
                                     <source media="(min-width: 1280px)" type="image/webp" srcset="img/page/bg-3-1280.webp">
-                                    <img width="100%" height="100%" src="img/page/bg-3.webp" alt="image">
+                                    <img src="img/page/bg-3.webp" alt="image">
                                 </picture>
                             </div>
                         </div>
@@ -319,6 +321,6 @@
 </footer>
 		</div>
        
-		<script src="js/app.min.js?_v=20240418215611"></script>
+		<script src="js/app.min.js?_v=20240418221237"></script>
 	</body>
 </html>
