--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418221237">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418222233">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418221237" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418221237">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418222233" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20240418222233">
 	<title>Home</title>
 
 </head>
@@ -1265,8 +1265,8 @@
     </div>
 </footer>
 		</div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20240418221237"></script>
-		<script src="js/app.min.js?_v=20240418221237"></script>
+        <script async src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js ?_v=20240418222233"></script>
+		<script async src="js/app.min.js?_v=20240418222233"></script>
 		
 	</body>
 </html>
