--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 								</div>
 								<div class="current-item__valuta valuta">
 									<div class="valuta__title">
-										<h4>Supported Currency</h4>
+										<p>Supported Currency</h4>
 									</div>
 									<div class="valuta__body">
 										<div id="rupiiUsd" class="valuta__item">
