--- a/career.html
+++ b/career.html
@@ -6,9 +6,9 @@
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.min.css?_v=20240418222233">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418222233" rel="stylesheet">
+	<link async rel="preconnect" href="https://fonts.googleapis.com">
+	<link async rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link async href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418222233" rel="stylesheet">
 	
 	<title>Career</title>
 
