--- a/security.html
+++ b/security.html
@@ -5,13 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418222233">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418230433">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418222233" rel="stylesheet">
-	
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418230433" rel="stylesheet">
 	<title>Security</title>
-
 </head>
 	<body>
 		<div class="wrapper">
@@ -23,7 +21,7 @@
                     <picture>
                         <source media="(min-width:1280px )" type="image/svg+xml" srcset="img/header/logo.svg">
                         <source media="(min-width:768px )" type="image/svg+xml" srcset="img/header/logo1280.svg">
-                        <img src="img/header/logomobile.svg" alt="logo">
+                        <img height="41" width="156" src="img/header/logomobile.svg" alt="logo">
                     </picture>
                 </a>
             </div>
@@ -47,7 +45,7 @@
                             <span></span>
                         </li>
                     </ul>
-                    <ul class="menu__list">
+                    <ul class="menu__list menu__list-2">
                         <li class="menu__item">
                             <a  href='signup.html' class="menu__link menu__link-m button button-black">Sign Up</a>
                         </li>
@@ -332,6 +330,6 @@
 </footer>
 		</div>
         
-		<script async src="js/app.min.js?_v=20240418222233"></script>
+		<script async src="js/app.min.js?_v=20240418230433"></script>
 	</body>
 </html>
