--- a/career.html
+++ b/career.html
@@ -5,18 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418230433">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418231542">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418230433" rel="stylesheet">
-=======
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418222233">
-	<link async rel="preconnect" href="https://fonts.googleapis.com">
-	<link async rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link async href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418222233" rel="stylesheet">
-	
->>>>>>> 38682bb0834ae8eb823467875d3f65a8556e77e1
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418231542" rel="stylesheet">
 	<title>Career</title>
 </head>
 	<body>
@@ -89,7 +81,7 @@
                                 <picture>
                                     <source media="(min-width: 1280px)" type="image/webp" srcset="img/page/bg-2-1280.webp">
                                    
-                                    <img  src="img/page/bg-2.webp" alt="image">
+                                    <img width="714" height="568" src="img/page/bg-2.webp" alt="image">
                                 </picture>
                             </div>
                         </div>
@@ -563,6 +555,6 @@
 </footer>
 		</div>
         
-		<script async src="js/app.min.js?_v=20240418230433"></script>
+		<script async src="js/app.min.js?_v=20240418231542"></script>
 	</body>
 </html>
