--- a/security.html
+++ b/security.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418230433">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418231542">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418230433" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418231542" rel="stylesheet">
 	<title>Security</title>
 </head>
 	<body>
@@ -82,7 +82,7 @@
                             <div class="main-welcome__image">
                                 <picture>
                                     <source media="(min-width: 1280px)" type="image/webp" srcset="img/page/bg-4-1280.webp">
-                                    <img src="img/page/bg-4.webp" alt="image">
+                                    <img width="714" height="568" src="img/page/bg-4.webp" alt="image">
                                 </picture>
                                 
                             </div>
@@ -330,6 +330,6 @@
 </footer>
 		</div>
         
-		<script async src="js/app.min.js?_v=20240418230433"></script>
+		<script async src="js/app.min.js?_v=20240418231542"></script>
 	</body>
 </html>
