--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									</svg>
 									<p>No LLC Required, No Credit Check.</p>
 								</div>
-								<div class="header-item__title ">
+								<div class="header-item__title " style="font-size: 40px;">
 									<h1>Welcome to YourBank
 										Empowering Your <span>Financial Journey</span></h1>
 								</div>
