--- a/index.html
+++ b/index.html
@@ -5,21 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418231542">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240418233428">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418231542" rel="stylesheet">
-=======
-
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418230433">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240418230433" rel="stylesheet">
-
-
 	
->>>>>>> 01645ad4301fa1399609151d64960c1b42e99c5f
 	<title>Home</title>
 </head>
 	<body>
@@ -85,7 +74,7 @@
 									</svg>
 									<p>No LLC Required, No Credit Check.</p>
 								</div>
-								<div class="header-item__title ">
+								<div class="header-item__title " style="font-size: 40px;">
 									<h1>Welcome to YourBank
 										Empowering Your <span>Financial Journey</span></h1>
 								</div>
@@ -1275,7 +1264,7 @@
 </footer>
 		</div>
         
-		<script async src="js/app.min.js?_v=20240418231542"></script>
+		<script async src="js/app.min.js?_v=20240418233428"></script>
 		
 	</body>
 </html>
