--- a/career.html
+++ b/career.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="btn">
-	 <head>
+	<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Your Bank Template" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240418233428">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240419200221">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap&_v=20240419200221" rel="stylesheet">
 	<title>Career</title>
 </head>
 	<body>
@@ -552,6 +555,6 @@
 </footer>
 		</div>
         
-		<script async src="js/app.min.js?_v=20240418233428"></script>
+		<script async src="js/app.min.js?_v=20240419200221"></script>
 	</body>
 </html>
